# CosmoCore

./: pyproject.toml
src/cosmo/engine/: builtin.py  core.py  model.py  source.py
src/cosmo/plugin/: __init__.py  builtin.py  model.py  service.py
src/cosmo/plugin/builtin/: __init__.py  lunar.py  solar.py
src/cosmo/rules/: manager.py  model.py  process.py
src/cosmocore/: __init__.py
