[project]
name = "cosmocore"
version = "0.1.0"
description = "Core Cosmo Home Assistant Functionality"
readme = "README.md"
authors = [
    { name = "Dan Marchese", email = "dan@marchese.me" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "astral>=3.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cosmo"]

[dependency-groups]
dev = [
    "pyright>=1.1",
    "ruff>=0.12",
]

[tool.pyright]
include = ["."]
exclude = ["**/__pycache__", "**/.venv", "**/node_modules", "**/.git"]
reportMissingImports = true
reportMissingTypeStubs = false
pythonVersion = "3.12"
typeCheckingMode = "basic"

[tool.ruff]
target-version = "py312"
line-length = 90

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
